Update Faster_Android_Studio.md